fix header overflow

--- a/css/header.css
+++ b/css/header.css
@@ -38,7 +38,7 @@
     display:flex;
     align-items: center;
     padding: 0px 10px;
-    gap:2rem;
+    gap:1.7rem;
     /* height:105px; */
 }
 
