--- a/css/technical-documents.css
+++ b/css/technical-documents.css
@@ -192,9 +192,20 @@
     justify-content: center;
     align-items: center;
     gap:2rem;
+    padding:3rem 0;
 }
 
 .technical-docs-box {
+    position:relative;
+    width:250px;
+    background-color:#fff;
+    border:1px solid #ccc;
+    padding:1rem;
+    padding-top:3.5rem;
+    margin:auto;
+}
+
+.technical-docs-box-w-cat {
     position:relative;
     width:250px;
     background-color:#fff;
@@ -270,15 +281,21 @@
     color:var(--border-accent-color);
 }
 
+.technical-docs-category {
+    color:var(--border-accent-color);
+    font-size:1.3rem;
+    padding: 0 10px;
+    text-align:center;
+}
+
     @media screen and (min-width:600px) {
         .technical-docs-box-container {
             display:grid;
             grid-template-columns:repeat(2,1fr);
         }
-
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 850px) {
     .technical-docs-box-container {
         display:grid;
         grid-template-columns: repeat(3, 1fr);
@@ -286,6 +303,25 @@
         align-content: center;
         padding:0 10px;
         gap:1.5rem;
+    }
+
+    .technical-docs-box-container-w-cat {
+        display:grid;
+        grid-template-columns: repeat(3, 1fr);
+        justify-content: center;
+        align-content: center;;
+        gap:1.5rem;
+    }
+
+    .technical-docs-category {
+        display:grid;
+        text-align:left;
+        padding-left:0;
+        margin-left:0;
+    }
+
+    .technical-docs-box-w-cat {
+        margin:0;
     }
 } 
 
@@ -305,7 +341,7 @@
     }
 
     .technical-docs-box-container {
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(3, 1fr);
     }
 
     .technical-docs-paragraph {
